--- a/app-juegomuseos/src/main/java/com/gf/app/juegomuseos/resources/AppInfo.html
+++ b/app-juegomuseos/src/main/java/com/gf/app/juegomuseos/resources/AppInfo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,65 @@
     <title>Document</title>
     <style>
         h1 {
-            background-color: red;
+            background-color: #641E16;
+            color: white;
+        }
+
+        h2 {
+            background-color: #512E5F;
             color: white;
         }
 
         h3 {
-            background-color: #C277FF;
+            background-color: #0E6251;
             color: white;
         }
     </style>
 </head>
+
 <body>
     <h1>INFORMACIÓN</h1>
-    <p>Esta aplicación se ha realizado en el contexto de un proyecto final de Programación. Realizado por Luis Fernández y Noel Prieto.</p>
-    <h3>JUEGOS INCLUIDOS</h3>
+    <p>Esta aplicación se ha realizado en el contexto de un proyecto final de Programación. Realizado por Luis Fernández
+        y Noel Prieto.</p>
+    <hr>
+    <br>
+    <h2>JUEGOS INCLUIDOS</h2>
     <ul>
-        <li>Adivinar autor</li>
-        <li>Si existe o no</li>
-        <li>Cuál es de gregorio</li>
-        <li>Sitúa en el mapa</li>
+        <li>¿Quién lo hizo?</li>
+        <li>Verdadero/Falso de museos</li>
+        <li>Gregorio Fernández</li>
+        <li>Coloca en el mapa</li>
     </ul>
+    <h3>¿QUIÉN LO HIZO?</h3>
+    En este juego se mostrará una imagen y 4 botones en la parte inferior de la pantalla. El objetivo de este juego
+    es acertar de quién es la obra de la imagen propuesta con las opciones que se muestran en los botones.
+    <h3>VERDADERO/FALSO DE MUSEOS</h3>
+    En este juego se muestra un nombre de un museo y el jugador deberá decidir si existe o no según los botones que
+    aparecen en la parte inferior de la ventana.
+    <h3>GREGORIO FERNÁNDEZ</h3>
+    En este juego aparecen dos imágenes que corresponden a dos botones. El objetivo es seleccionar la imagen de la
+    obra perteneciente al autor Gregorio Fernández.
+    <h3>COLOCA EN EL MAPA</h3>
+    En este juego aparece un mapa político del mundo y una obra con su imagen y nombre. El jugador o jugadores
+    deberán seleccionar el país donde se ubica la obra.
+    <hr>
+    <br>
+    <h2>INFORMACIÓN MENÚ</h2>
+    <p>En el juego hay dos modos de realizar los distintos juegos. El primero es el <b>MODO YINCANA</b> que es el que
+        sería el modo competitivo. En este se recoge el tiempo transcurrido y los fallos realizados para posteriormente
+        añadirlos a la base de datos.
+
+        El segundo modo es el <b>MODO LIBRE</b> donde puedes seleccionar el juego en concreto y jugarlo. En este caso no
+        se almacenará el tiempo ni el usuario que lo juega.
+    </p>
+    <p>
+        Hay tres botones más en el menú principal. Entre ellos está el botón de <b>INFORMACIÓN</b> que es donde te
+        encuentras actualmente. Además está el botón <b>AJUSTES</b> donde puedes seleccionar el modo de ventana, que se
+        actualizará después de reiniciar la aplicación.
+
+        Por último se encuentra el botón <b>SALIR</b> que sirve para salir de la aplicación.
+    </p>
+
 </body>
+
 </html>
