--- a/app-juegomuseos/src/main/java/com/gf/app/juegomuseos/resources/AppInfo.html
+++ b/app-juegomuseos/src/main/java/com/gf/app/juegomuseos/resources/AppInfo.html
@@ -8,18 +8,18 @@
     <title>Document</title>
     <style>
         h1 {
-            background-color: #641E16;
-            color: white;
+            background-color: #cc6600;
+            color: #6699ff;
         }
 
         h2 {
-            background-color: #512E5F;
-            color: white;
+            background-color: #cc6600;
+            color: #99ccff;
         }
 
         h3 {
-            background-color: #0E6251;
-            color: white;
+            background-color: #cc6600;
+            color: #333333;
         }
     </style>
 </head>
@@ -49,6 +49,9 @@
     <h3>COLOCA EN EL MAPA</h3>
     En este juego aparece un mapa político del mundo y una obra con su imagen y nombre. El jugador o jugadores
     deberán seleccionar el país donde se ubica la obra.
+    <h3>RANKING</h3>
+    En esta ventana aparece una tabla con los nombres de los jugadores que han participado en el juego y su puntuación 
+    en tiempo con formato 00:00.
     <hr>
     <br>
     <h2>INFORMACIÓN MENÚ</h2>
